<resources>
    <string name="app_name">Marvel</string>
    <string name="app_name_big">MARVEL</string>
    <string name="error_title">Error :( </string>
    <string name="error_message">Something went wrong ,check your internet connection!</string>
    <string name="error_button">OK</string>
    <string name="empty_state">You don\'t have any Marvel hero in your magazine, You can search and add them into your app.</string>
    <string name="search_hint">Search…</string>
</resources>